--- a/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj
+++ b/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj
@@ -62,6 +62,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A\lib;$(LibraryPath)</LibraryPath>
+    <ReferencePath>$(ReferencePath)</ReferencePath>
+    <IncludePath>D:\physwf-c-lab\shared\include;D:\physwf-c-lab\OpenGL_ES\games\Landlords\shared;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LibraryPath>$(MSBuildProgramFiles32)\Microsoft SDKs\Windows\v7.1A\lib;$(LibraryPath)</LibraryPath>
@@ -133,11 +135,22 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\LandLordScene.cpp" />
+    <ClCompile Include="..\Game\game.cpp" />
+    <ClCompile Include="..\Game\input.cpp" />
+    <ClCompile Include="..\Game\listener.cpp" />
+    <ClCompile Include="..\Game\main.cpp" />
+    <ClCompile Include="..\Game\net.cpp" />
+    <ClCompile Include="..\Game\services.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\LandLordScene.h" />
+    <ClInclude Include="..\Game\game.h" />
+    <ClInclude Include="..\Game\input.h" />
+    <ClInclude Include="..\Game\listener.h" />
+    <ClInclude Include="..\Game\net.h" />
+    <ClInclude Include="..\Game\services.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
