--- a/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
+++ b/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\Game\services.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\PokerCardSprite.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -64,6 +67,12 @@
     </ClInclude>
     <ClInclude Include="..\Game\services.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\PokerCardSprite.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Properties.h">
+      <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
