--- a/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
+++ b/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\PokerCardSprite.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Properties.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -71,7 +74,7 @@
     <ClInclude Include="..\Classes\PokerCardSprite.h">
       <Filter>Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Properties.h">
+    <ClInclude Include="..\Classes\Properties.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
