--- a/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
+++ b/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\Classes\Properties.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Config.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -75,6 +78,9 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Properties.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Config.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
