--- a/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
+++ b/cocos2dx-app/LandLord/win32/LandLordCpp.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\Classes\Config.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\LLSceneController.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -81,6 +84,9 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Config.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\LLSceneController.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
