--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
@@ -133,11 +133,14 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\DoomWarScene.cpp" />
+    <ClCompile Include="..\System\Battle.cpp" />
+    <ClCompile Include="..\System\Battle.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\DoomWarScene.h" />
+    <ClInclude Include="..\System\Unit.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
