--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
@@ -136,6 +136,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClCompile Include="..\Components\EventDispatcher.cpp" />
     <ClCompile Include="..\Components\EventDispatcher.h" />
     <ClCompile Include="..\Components\Heap.cpp" />
+    <ClCompile Include="..\Components\ResourceManager.cpp" />
+    <ClCompile Include="..\Engine\ActorSprite.cpp" />
+    <ClCompile Include="..\Engine\MapSprite.cpp" />
     <ClCompile Include="..\System\Battle.cpp" />
     <ClCompile Include="..\System\Battle.h" />
     <ClCompile Include="..\System\Map.cpp" />
@@ -147,7 +150,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\DoomWarScene.h" />
     <ClInclude Include="..\Components\Heap.h" />
-    <ClInclude Include="..\Engine\Actor.h" />
+    <ClInclude Include="..\Components\ResourceManager.h" />
+    <ClInclude Include="..\Engine\ActorSprite.h" />
+    <ClInclude Include="..\Engine\MapSprite.h" />
     <ClInclude Include="..\System\Event.h" />
     <ClInclude Include="..\System\Map.h" />
     <ClInclude Include="..\System\System.h" />
